--- a/log-in/index.html
+++ b/log-in/index.html
@@ -10,51 +10,18 @@
   <script src="https://kit.fontawesome.com/f7a92f9ee8.js" crossorigin="anonymous"></script>
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
 <body>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <h1><i class="fas fa-city"></i> <strong>metropolis.city</strong></h1>
-      </a>
+  <div id="navbar-import">
+  </div>
 
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="basicNavbar">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-
-    <div id="basicNavbar" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" href="/about">About</a>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">Game Servers</a>
-          <div class="navbar-dropdown">
-            <a class="navbar-item" href="/minecraft"><img class="navbar-img" src="/src/img/minecraft-logo.png"
-                alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
-            <hr class="navbar-divider">
-            <a class="navbar-item" href="/contact-staff">Suggest a Server</a>
-          </div>
-        </div>
-        <a class="navbar-item" href="/contact-staff">Contact Staff</a>
-      </div>
-
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-img"
-                src="/src/img/discord-logo.png" alt="Discord Logo" width="25%" height="25%">Discord</a>
-            </a>
-            <a class="button is-light" href="/log-in">
-              Log in
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <script>
+    $(function () {
+      $("#navbar-import").load("/navbar.html");
+    });
+  </script>
 
   <div class="container-large">
     <nav class="breadcrumb" aria-label="breadcrumbs">
