--- a/about/index.html
+++ b/about/index.html
@@ -52,18 +52,12 @@
     <h1 class="title">Our staff</h1>
     <h2 class="subtitle">Working together to ensure you have a great experience.</h2>
     <ul>
-      <li>Owner <img class="profile-img"
-          src="https://cdn.discordapp.com/avatars/140613976991072257/98956f7ba7ddf28e0af9bd58c6e9faa4.png?size=1024"
-          height="18px" width="18px">
+      <li>Owner 
         <strong><a href="https://discord.com/users/140613976991072257/" target="_blank"> Whallop#0001</a></strong>
       </li>
-      <li>Admin <img class="profile-img"
-          src="https://cdn.discordapp.com/avatars/177088916250296320/d0283b1b3cdd556cf7ba2e3cbc5bad17.png?size=1024"
-          height="18px" width="18px"><strong><a href="https://discord.com/users/177088916250296320/" target="_blank">
+      <li>Admin 
             CHCMATT#0001</a></strong></li>
-      <li>Mod <img class="profile-img"
-          src="https://cdn.discordapp.com/avatars/176841098516234240/8df03ece27338a3e6c80a55c605e8225.png?size=1024"
-          height="18px" width="18px"><strong><a href="https://discord.com/users/176841098516234240/" target="_blank">
+      <li>Moderator 
             The_Skipper96#4575</a></strong></li>
     </ul>
   </div>
