--- a/about/index.html
+++ b/about/index.html
@@ -52,13 +52,10 @@
     <h1 class="title">Our staff</h1>
     <h2 class="subtitle">Working together to ensure you have a great experience.</h2>
     <ul>
-      <li>Owner 
-        <strong><a href="https://discord.com/users/140613976991072257/" target="_blank"> Whallop#0001</a></strong>
+      <li>Owner <strong><a href="https://discord.com/users/140613976991072257/" target="_blank">Whallop#0001</a></strong>
       </li>
-      <li>Admin 
-            CHCMATT#0001</a></strong></li>
-      <li>Moderator 
-            The_Skipper96#4575</a></strong></li>
+      <li>Admin <strong><a href="https://discord.com/users/177088916250296320/" target="_blank">CHCMATT#0001</a></strong></li>
+      <li>Moderator <strong><a href="https://discord.com/users/176841098516234240/" target="_blank">The_Skipper96#4575</a></strong></li>
     </ul>
   </div>
 </body>
