Add footer to all pages

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
-  <script src="https://kit.fontawesome.com/f7a92f9ee8.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -20,6 +20,9 @@
   <script>
     $(function () {
       $("#navbar-import").load("/navbar.html");
+    });
+    $(function () {
+      $("#footer-import").load("/footer.html");
     });
   </script>
 
@@ -52,11 +55,16 @@
     <h1 class="title">Our staff</h1>
     <h2 class="subtitle">Working together to ensure you have a great experience.</h2>
     <ul>
-      <li>Owner <strong><a href="https://discord.com/users/140613976991072257/" target="_blank">Whallop#0001</a></strong>
+      <li>Owner <strong><a href="https://discord.com/users/140613976991072257/"
+            target="_blank">Whallop#0001</a></strong>
       </li>
-      <li>Admin <strong><a href="https://discord.com/users/177088916250296320/" target="_blank">CHCMATT#0001</a></strong></li>
-      <li>Moderator <strong><a href="https://discord.com/users/176841098516234240/" target="_blank">The_Skipper96#4575</a></strong></li>
+      <li>Admin <strong><a href="https://discord.com/users/177088916250296320/"
+            target="_blank">CHCMATT#0001</a></strong></li>
+      <li>Moderator <strong><a href="https://discord.com/users/176841098516234240/"
+            target="_blank">The_Skipper96#4575</a></strong></li>
     </ul>
+  </div>
+  <div id="footer-import">
   </div>
 </body>
 
