--- a/contact-staff/index.html
+++ b/contact-staff/index.html
@@ -22,6 +22,9 @@
     $(function () {
       $("#navbar-import").load("/navbar.html");
     });
+    $(function () {
+      $("#footer-import").load("/footer.html");
+    });
   </script>
 
   <div class="container-large">
@@ -85,6 +88,8 @@
         </div>
       </div>
     </form>
+  </div>
+  <div id="footer-import">
   </div>
 </body>
 
