--- a/game-servers/minecraft/index.html
+++ b/game-servers/minecraft/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Home - metropolis.city</title>
+  <title>Minecraft Server - metropolis.city</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -26,18 +26,22 @@
     });
   </script>
 
-  <div class=" container-large">
+  <div class="container-large">
     <nav class="breadcrumb" aria-label="breadcrumbs">
       <ul>
-        <li class="is-active"><a aria-current="page">Home</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/game-servers">Game Servers</a></li>
+        <li class="is-active"><a aria-current="page">Minecraft Server</a></li>
       </ul>
     </nav>
   </div>
 
   <div class="container">
-    <h3>Coming soon to a browser near you...</h3>
+    <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/MmB9b5njVbA"
+      title="Original Minecraft Trailer" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
   </div>
-
   <div id="footer-import">
   </div>
 </body>
