--- a/navbar.html
+++ b/navbar.html
@@ -15,12 +15,12 @@
     <div class="navbar-start">
       <a class="navbar-item" href="/about">About</a>
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">Game Servers</a>
+        <a class="navbar-link" href="/game-servers">Game Servers</a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/minecraft"><img class="navbar-img" src="/src/img/minecraft-logo.png"
-              alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
+          <a class="navbar-item" href="/game-servers/minecraft"><img class="navbar-img"
+              src="/src/img/minecraft-logo.png" alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
           <hr class="navbar-divider">
-          <a class="navbar-item" href="/contact-staff">Suggest a Server</a>
+          <a class="navbar-item" href="/contact-staff">Suggest a Server Type</a>
         </div>
       </div>
       <a class="navbar-item" href="/contact-staff">Contact Staff</a>
