--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
-  <script src="https://kit.fontawesome.com/f7a92f9ee8.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -20,6 +20,9 @@
   <script>
     $(function () {
       $("#navbar-import").load("/navbar.html");
+    });
+    $(function () {
+      $("#footer-import").load("/footer.html");
     });
   </script>
 
@@ -80,6 +83,8 @@
     <div class="control">
       <button class="button is-link">Sign Up</button>
     </div>
+  </div>
+  <div id="footer-import">
   </div>
 </body>
 
