--- a/game-servers/minecraft/index.html
+++ b/game-servers/minecraft/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/game-servers">Game Servers</a></li>
-        <li class="is-active"><a aria-current="page">Minecraft Server</a></li>
+        <li class="is-active"><a aria-current="page">Minecraft</a></li>
       </ul>
     </nav>
   </div>
