Fix tabination headers

--- a/game-servers/index.html
+++ b/game-servers/index.html
@@ -40,8 +40,9 @@
 			<ul>
 				<li class="is-active"><a>Minecraft</a></li>
 				<li><a>ARK: Survival Evolved</a></li>
-				<li><a>Videos</a></li>
-				<li><a>Documents</a></li>
+				<li><a>Terraria</a></li>
+				<li><a>7 Days to Die</a></li>
+				<li><a>Project Zomboid</a></li>
 			</ul>
 		</div>
 	</div>
