Fix navbar logo

--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
-      <h1><i class="fas fa-city"></i> <strong>metropolis.city</strong></h1>
+      <img src="/src/img/longtext_black_color_resize.png" \>
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="basicNavbar">
@@ -17,7 +17,7 @@
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link" href="/game-servers">Game Servers</a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/game-servers/minecraft"><img class="navbar-img"
+          <a class="navbar-item" href="/game-servers/minecraft"><img class="navbar-btn-img"
               src="/src/img/minecraft-logo.png" alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="/contact-staff">Suggest a Server Type</a>
@@ -29,7 +29,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-img"
+          <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img"
               src="/src/img/discord-logo.png" alt="Discord Logo" width="25%" height="25%">Discord</a>
           </a>
           <a class="button is-light" href="/log-in">
