--- a/game-servers/minecraft/index.html
+++ b/game-servers/minecraft/index.html
@@ -11,7 +11,7 @@
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="icon" href="/src/img/m_favicon_white.ico">
+  <link rel="icon" type="image/png" href="/src/img/m_favicon_white.png" sizes="32x32">
 </head>
 
 <body>
