--- a/about/index.html
+++ b/about/index.html
@@ -3,29 +3,13 @@
 
 <head>
   <title>About - metropolis.city</title>
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
-  <link href="/src/css/bulma.css" rel="stylesheet">
-  <link href="/src/css/style.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="icon" type="image/png" href="/src/img/m_favicon_white.png" sizes="32x32">
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="/src/js/imports.js"></script>
 </head>
 
 <body>
-  <div id="navbar-import">
+  <div id="header-import">
   </div>
-
-  <script>
-    $(function () {
-      $("#navbar-import").load("/navbar.html");
-    });
-    $(function () {
-      $("#footer-import").load("/footer.html");
-    });
-  </script>
 
   <div class="container-large">
     <nav class="breadcrumb" aria-label="breadcrumbs">
@@ -39,8 +23,8 @@
   <div class="container">
     <h1 class="title">What is Metropolis?</h1>
     <h2 class="subtitle">A little background about what we are.</h2>
-    <p>We are a couple of friends dedicated to creating a great community with awesome game servers for you and your
-      friends to play on. We want to provide a great experience for all players.</p>
+    <p>We are a small group of friends dedicated to creating a great community with awesome game servers for you and
+      your friends to play on. We want to provide a great experience for all players.</p>
     <br />
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ante mauris, sodales sed dolor sed, sollicitudin
       mollis nisl. Praesent lobortis justo id egestas consequat. Nullam augue tellus, semper sed pulvinar quis,
