--- a/game-servers/minecraft/index.html
+++ b/game-servers/minecraft/index.html
@@ -2,30 +2,14 @@
 <html>
 
 <head>
-  <title>Minecraft Server - metropolis.city</title>
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
-  <link href="/src/css/bulma.css" rel="stylesheet">
-  <link href="/src/css/style.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="icon" type="image/png" href="/src/img/m_favicon_white.png" sizes="32x32">
+  <title>Minecraft Servers - metropolis.city</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="/src/js/imports.js"></script>
 </head>
 
 <body>
-  <div id="navbar-import">
+  <div id="header-import">
   </div>
-
-  <script>
-    $(function () {
-      $("#navbar-import").load("/navbar.html");
-    });
-    $(function () {
-      $("#footer-import").load("/footer.html");
-    });
-  </script>
 
   <div class="container-large">
     <nav class="breadcrumb" aria-label="breadcrumbs">
