--- a/game-servers/index.html
+++ b/game-servers/index.html
@@ -3,6 +3,13 @@
 
 <head>
 	<title>Game Servers - metropolis.city</title>
+	<link href="https://fonts.googleapis.com" rel="preconnect">
+	<link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
+	<link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
+	<script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
+	<link href="/src/css/bulma.css" rel="stylesheet">
+	<link href="/src/css/style.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<script src="/src/js/imports.js"></script>
 </head>
