--- a/header.html
+++ b/header.html
@@ -20,8 +20,18 @@
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link" href="/game-servers">Game Servers</a>
         <div class="navbar-dropdown">
+          <a class="navbar-item" href="/game-servers/7-days-to-die"><img class="navbar-btn-img"
+              src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20%" height="20%">7 Days To Die</a>
+          <a class="navbar-item" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img"
+              src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20%"
+              height="20%">ARK: Survival Evolved</a>
           <a class="navbar-item" href="/game-servers/minecraft"><img class="navbar-btn-img"
-              src="/src/img/minecraft-logo.png" alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
+              src="/src/img/logo-minecraft.png" alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
+          <a class="navbar-item" href="/game-servers/project-zomboid"><img class="navbar-btn-img"
+              src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo" width="20%" height="20%">Project
+            Zomboid</a>
+          <a class="navbar-item" href="/game-servers/terraria"><img class="navbar-btn-img"
+              src="/src/img/logo-terraria.png" alt="Terraria Logo" width="20%" height="20%">Terraria</a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="/contact-staff">Suggest a Server Type</a>
         </div>
