--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="/src/js/imports.js"></script>
   <script src="/src/js/sign-up.js"></script>
+  <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
 
 <body>
