Remove aria labels

--- a/game-servers/index.html
+++ b/game-servers/index.html
@@ -29,10 +29,10 @@
 	</script>
 
 	<div class="container-large">
-		<nav class="breadcrumb" aria-label="breadcrumbs">
+		<nav class="breadcrumb">
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li class="is-active"><a aria-current="page">Game Servers</a></li>
+				<li class="is-active"><a>Game Servers</a></li>
 			</ul>
 		</nav>
 	</div>
