--- a/about/index.html
+++ b/about/index.html
@@ -20,10 +20,10 @@
   </div>
 
   <div class="container-large">
-    <nav class="breadcrumb" aria-label="breadcrumbs">
+    <nav class="breadcrumb">
       <ul>
         <li><a href="/">Home</a></li>
-        <li class="is-active"><a aria-current="page">About</a></li>
+        <li class="is-active"><a>About</a></li>
       </ul>
     </nav>
   </div>
