--- a/game-servers/7-days-to-die/index.html
+++ b/game-servers/7-days-to-die/index.html
@@ -20,11 +20,11 @@
   </div>
 
   <div class="container-large">
-    <nav class="breadcrumb" aria-label="breadcrumbs">
+    <nav class="breadcrumb">
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/game-servers">Game Servers</a></li>
-        <li class="is-active"><a aria-current="page">7 Days To Die</a></li>
+        <li class="is-active"><a>7 Days To Die</a></li>
       </ul>
     </nav>
   </div>
