--- a/header.html
+++ b/header.html
@@ -1,13 +1,13 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar" role="navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <img src="/src/img/longtext_black_color_resize.png" \>
     </a>
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="basicNavbar">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
+    <a role="button" class="navbar-burger">
+      <span></span>
+      <span></span>
+      <span></span>
     </a>
   </div>
 
