--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </div>
 
   <div class="container-large">
-    <nav class="breadcrumb" aria-label="breadcrumbs">
+    <nav class="breadcrumb">
       <ul>
-        <li class="is-active"><a aria-current="page">Home</a></li>
+        <li class="is-active"><a>Home</a></li>
       </ul>
     </nav>
   </div>
