--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -21,10 +21,10 @@
   </div>
 
   <div class="container-large">
-    <nav class="breadcrumb" aria-label="breadcrumbs">
+    <nav class="breadcrumb">
       <ul>
         <li><a href="/">Home</a></li>
-        <li class="is-active"><a aria-current="page">Sign Up</a></li>
+        <li class="is-active"><a>Sign Up</a></li>
       </ul>
     </nav>
   </div>
