Fix Game Servers tabs system

--- a/game-servers/7-days-to-die/index.html
+++ b/game-servers/7-days-to-die/index.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/game-servers">Game Servers</a></li>
-        <li class="is-active"><a>7 Days To Die</a></li>
+        <li class="is-active"><a>7 Days to Die</a></li>
       </ul>
     </nav>
   </div>
