--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
         <a class="navbar-link" href="/game-servers">Game Servers</a>
         <div class="navbar-dropdown">
           <a class="navbar-item" href="/game-servers/7-days-to-die"><img class="navbar-btn-img"
-              src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20%" height="20%">7 Days To Die</a>
+              src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20%" height="20%">7 Days to Die</a>
           <a class="navbar-item" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img"
               src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20%"
               height="20%">ARK: Survival Evolved</a>
