Fix Navbar collapse/expand on mobile

--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
     </nav>
   </div>
 
-  <div class="container">
+  <div class="container is-max-desktop">
     <h1 class="title">What is Metropolis?</h1>
     <h2 class="subtitle">A little background about what we are.</h2>
     <p>We are a small group of friends dedicated to creating a great community with awesome game servers for you and
