--- a/game-servers/terraria/index.html
+++ b/game-servers/terraria/index.html
@@ -29,7 +29,7 @@
     </nav>
   </div>
 
-  <div class="container">
+  <div class="container is-max-desktop">
     <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/w7uOhFTrrq0"
       title="Terraria Official Trailer" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
