--- a/game-servers/7-days-to-die/index.html
+++ b/game-servers/7-days-to-die/index.html
@@ -29,7 +29,7 @@
     </nav>
   </div>
 
-  <div class="container">
+  <div class="container is-max-desktop">
     <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/Dt9EzY6FBWw"
       title="7 Days To Die Trailer | PS4" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
