--- a/game-servers/index.html
+++ b/game-servers/index.html
@@ -28,7 +28,7 @@
 			</ul>
 		</nav>
 	</div>
-	<div class="container">
+	<div class="container is-max-desktop">
 		<div class="tabs" id="tabs">
 			<ul>
 				<li data-tab="1" class="is-active"><a>7 Days to Die</a></li>
