--- a/game-servers/minecraft/index.html
+++ b/game-servers/minecraft/index.html
@@ -29,7 +29,7 @@
     </nav>
   </div>
 
-  <div class="container">
+  <div class="container is-max-desktop">
     <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/MmB9b5njVbA"
       title="Original Minecraft Trailer" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
