--- a/header.html
+++ b/header.html
@@ -1,34 +1,39 @@
+<head>
+  <script src="/src/js/header.js"></script>
+</head>
+
 <nav class="navbar" role="navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <img src="/src/img/longtext_black_color_resize.png" \>
     </a>
 
-    <a role="button" class="navbar-burger">
+    <a role="button" id="nav-toggle" class="navbar-burger">
       <span></span>
       <span></span>
       <span></span>
     </a>
   </div>
 
-  <div id="basicNavbar" class="navbar-menu">
+  <div id="nav-menu" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="/about">About</a>
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link" href="/game-servers">Game Servers</a>
         <div class="navbar-dropdown">
           <a class="navbar-item" href="/game-servers/7-days-to-die"><img class="navbar-btn-img"
-              src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20%" height="20%">7 Days to Die</a>
+              src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
+            Die</a>
           <a class="navbar-item" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img"
-              src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20%"
-              height="20%">ARK: Survival Evolved</a>
+              src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20px"
+              height="20px">ARK: Survival Evolved</a>
           <a class="navbar-item" href="/game-servers/minecraft"><img class="navbar-btn-img"
-              src="/src/img/logo-minecraft.png" alt="Minecraft Logo" width="20%" height="20%">Minecraft</a>
+              src="/src/img/logo-minecraft.png" alt="Minecraft Logo" width="20px" height="20px">Minecraft</a>
           <a class="navbar-item" href="/game-servers/project-zomboid"><img class="navbar-btn-img"
-              src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo" width="20%" height="20%">Project
+              src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo" width="20px" height="20px">Project
             Zomboid</a>
           <a class="navbar-item" href="/game-servers/terraria"><img class="navbar-btn-img"
-              src="/src/img/logo-terraria.png" alt="Terraria Logo" width="20%" height="20%">Terraria</a>
+              src="/src/img/logo-terraria.png" alt="Terraria Logo" width="20px" height="20px">Terraria</a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="/contact-staff">Suggest a Server Type</a>
         </div>
