--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </div>
 
-  <div class="container">
+  <div class="container is-max-desktop">
     <h3>Coming soon to a browser near you...</h3>
   </div>
 
