Update Game Servers page

--- a/game-servers/index.html
+++ b/game-servers/index.html
@@ -29,22 +29,49 @@
 		</nav>
 	</div>
 	<div class="container is-max-desktop">
-		<div class="tabs" id="tabs">
-			<ul>
-				<li data-tab="1" class="is-active"><a>7 Days to Die</a></li>
-				<li data-tab="2" class=""><a>ARK: Survival Evolved</a></li>
-				<li data-tab="3" class=""><a>Minecraft</a></li>
-				<li data-tab="4" class=""><a>Project Zomboid</a></li>
-				<li data-tab="5" class=""><a>Terraria</a></li>
-			</ul>
-		</div>
-		<div id="tab-content">
-			<p class="is-active" data-content="1">7 Days to Die</p>
-			<p data-content="2">ARK: Survival Evolved</p>
-			<p data-content="3">Minecraft</p>
-			<p data-content="4">Project Zomboid</p>
-			<p data-content="5">Terraria</p>
-		</div>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Game Title</th>
+					<th>Server Capacity</th>
+					<th>Quantity of Servers</th>
+					<th>More Information</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<th>7 Days to Die</th>
+					<td>50 players</td>
+					<td>1</td>
+					<td>More information on <a href="/game-servers/7-days-to-die/">7 Days to Die</a></td>
+				</tr>
+				<tr>
+					<th>ARK: Survival Evolved</th>
+					<td>50 players</td>
+					<td>1</td>
+					<td>More information on <a href="/game-servers/ark-survival-evolved/">ARK: Survival Evolved</a></td>
+				</tr>
+				<tr>
+					<th>Minecraft</th>
+					<td>100 players</td>
+					<td>4</td>
+					<td>More information on <a href="/game-servers/minecraft/">Minecraft</a></td>
+				</tr>
+				<tr>
+					<th>Project Zomboid</th>
+					<td>25 players</td>
+					<td>2</td>
+					<td>More information on <a href="/game-servers/project-zomboid/">Project Zomboid</a></td>
+				</tr>
+				<tr>
+					<th>Terraria</th>
+					<td>50 players</td>
+					<td>3</td>
+					<td>More information on <a href="/game-servers/terraria/">Terraria</a></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 	<div id="footer-import">
 	</div>
