fix(header) - fix Discord logo stretch issue

--- a/header.html
+++ b/header.html
@@ -45,7 +45,7 @@
       <div class="navbar-item">
         <div class="buttons">
           <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img"
-              src="/src/img/discord-logo.png" alt="Discord Logo" width="25%" height="25%">Discord</a>
+              src="/src/img/discord-logo.png" alt="Discord Logo" width="20px" height="20px">Discord</a>
           </a>
           <a class="button is-light" href="/log-in">
             Log in
