fix(homepage) - fix typo in slogan

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="container is-max-desktop">
-    <h3>Metropolis is a <strong>a city that never sleeps.</strong></h3>
+    <h3>Metropolis is <strong>a city that never sleeps.</strong></h3>
   </div>
 
   <div id="footer-import">
