--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   <div class="container is-max-desktop">
     <h3>Metropolis is <strong>a city that never sleeps.</strong></h3>
+    <h3>Metropolis is <strong>the digital divide.</strong></h3>
+    <br \>
+    <h2><strong>Welcome, to your destination...</strong></h2>
   </div>
 
   <div id="footer-import">
