--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3>Metropolis is <strong>a city that never sleeps.</strong></h3>
     <h3>Metropolis is <strong>the digital divide.</strong></h3>
     <br \>
-    <h2><strong>Welcome, to your destination...</strong></h2>
+    <h2><i>Welcome, to your destination...</i></h2>
   </div>
 
   <div id="footer-import">
