add another slogan for testing

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <div class="container is-max-desktop">
     <h3>Metropolis is <strong>a city that never sleeps.</strong></h3>
     <h3>Metropolis is <strong>the digital divide.</strong></h3>
+    <h3>Next stop <strong>???</strong>...</h3>
     <br \>
-    <h1><i>Welcome, to your destination...</i></h1>
+    <h3><i>Welcome, to your destination...</i></h3>
   </div>
 
   <div id="footer-import">
