--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <div class="container is-max-desktop">
     <h3>Metropolis is <strong>a city that never sleeps.</strong></h3>
     <h3>Metropolis is <strong>the digital divide.</strong></h3>
+    <h3>Metropolis is <strong>reality, virtually.</strong></h3>
+    <h3>Metropolis is <strong>the bleeding edge.</strong></h3>
+    <h3>Metropolis is <strong>the future.</strong></h3>
     <h3>Next stop <strong>???</strong>...</h3>
     <br \>
     <h3><i>Welcome, to your destination...</i></h3>
