Fix contact staff form to actually work

--- a/contact-staff/index.html
+++ b/contact-staff/index.html
@@ -12,6 +12,7 @@
   <link href="/src/css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="/src/js/imports.js"></script>
+  <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
   <script src="/src/js/contact-staff.js"></script>
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
@@ -28,17 +29,7 @@
       </ul>
     </nav>
   </div>
-
-  <div id="success-message" class="notification notification-message success-message is-light is-success is-hidden">
-    <button onclick="removeSuccessMsg();" class="delete"></button>
-    We successfully sent your message to our staff team. You can expect a response <strong>within 72 hours.</strong>
-  </div>
-
-  <div id="failure-message" class="notification notification-message is-light is-danger is-hidden">
-    <button onclick="removeFailureMsg();" class="delete"></button>
-    We ran into an issue when trying to send your message to our staff team. <strong>Please report this issue in our
-      Discord server.</strong>
-  </div>
+  <div id="alerts"></div>
 
   <div class="container is-max-desktop">
     <form>
@@ -85,7 +76,8 @@
 
       <div class="field is-grouped">
         <div class="control">
-          <button type="submit" onclick="callAwsLambdaFunction(event)" class="button is-link">Contact Us</button>
+          <button type="submit" onclick="sendContact(event)" class="button is-link" id="contact-button">Contact
+            Us</button>
         </div>
         <div class="control">
           <button type="reset" class="button is-light">Reset Form</button>
