Swap theme from light mode to dark mode

--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-dark">
 
 <head>
   <title>About - metropolis.city</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
@@ -15,7 +14,7 @@
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
 
-<body>
+<body class="scrollbar-hide has-text-light">
   <div id="header-import">
   </div>
 
@@ -29,8 +28,8 @@
   </div>
 
   <div class="container is-max-desktop">
-    <h1 class="title">What is Metropolis?</h1>
-    <h2 class="subtitle">A little background about what we are.</h2>
+    <p class="title">What is Metropolis?</p>
+    <p class="subtitle">A little background about what we are.</p>
     <p>We are a small group of friends dedicated to creating a great community with awesome game servers for you and
       your friends to play on. We want to provide a great experience for all players.</p>
     <br />
@@ -45,16 +44,13 @@
       sapien felis, tincidunt a consequat nec, eleifend ac purus. Sed aliquam, nunc id placerat imperdiet, quam velit
       vestibulum eros, convallis iaculis dolor urna nec massa. Donec varius scelerisque venenatis.</p>
     <br /><br />
-    <h1 class="title">Our staff</h1>
-    <h2 class="subtitle">Working together to ensure you have a great experience.</h2>
+    <p class="title">Our staff</p>
+    <p class="subtitle">Working together to ensure you have a great experience.</p>
     <ul>
-      <li>Owner <strong><a href="https://discord.com/users/140613976991072257/"
-            target="_blank">Whallop#0001</a></strong>
+      <li>Owner <strong><a href="https://discord.com/users/140613976991072257/" target="_blank">Whallop#0001</a></strong>
       </li>
-      <li>Admin <strong><a href="https://discord.com/users/177088916250296320/"
-            target="_blank">CHCMATT#0001</a></strong></li>
-      <li>Moderator <strong><a href="https://discord.com/users/176841098516234240/"
-            target="_blank">The_Skipper96#4575</a></strong></li>
+      <li>Admin <strong><a href="https://discord.com/users/177088916250296320/" target="_blank">CHCMATT#0001</a></strong></li>
+      <li>Moderator <strong><a href="https://discord.com/users/176841098516234240/" target="_blank">The_Skipper96#4575</a></strong></li>
     </ul>
   </div>
   <div id="footer-import">
