--- a/contact-staff/index.html
+++ b/contact-staff/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-dark">
 
 <head>
   <title>Contact Staff - metropolis.city</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
@@ -17,7 +16,7 @@
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
 
-<body>
+<body class="scrollbar-hide has-text-light">
   <div id="header-import">
   </div>
 
@@ -69,8 +68,7 @@
       <div class="field">
         <label class="label">Message</label>
         <div class="control">
-          <textarea id="msgInput" class="textarea"
-            placeholder="hello,&#13;&#10;i like pie&#13;&#10;sincerely,&#13;&#10;chcmatt"></textarea>
+          <textarea id="msgInput" class="textarea" placeholder="hello,&#13;&#10;i like pie&#13;&#10;sincerely,&#13;&#10;chcmatt"></textarea>
         </div>
       </div>
 
