--- a/header.html
+++ b/header.html
@@ -2,10 +2,10 @@
   <script src="/src/js/header.js"></script>
 </head>
 
-<nav class="navbar" role="navigation">
+<nav role="navigation" class="navbar is-black-ter">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
-      <img src="/src/img/longtext_black_color_resize.png" \>
+      <img src="/src/img/longtext_white_color_resize.png" \>
     </a>
 
     <a role="button" id="nav-toggle" class="navbar-burger">
@@ -20,22 +20,16 @@
       <a class="navbar-item" href="/about">About</a>
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link" href="/game-servers">Game Servers</a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="/game-servers/7-days-to-die"><img class="navbar-btn-img"
-              src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
+        <div class="navbar-dropdown has-background-dark">
+          <a class="navbar-item has-text-light" href="/game-servers/7-days-to-die"><img class="navbar-btn-img" src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
             Die</a>
-          <a class="navbar-item" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img"
-              src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20px"
-              height="20px">ARK: Survival Evolved</a>
-          <a class="navbar-item" href="/game-servers/minecraft"><img class="navbar-btn-img"
-              src="/src/img/logo-minecraft.png" alt="Minecraft Logo" width="20px" height="20px">Minecraft</a>
-          <a class="navbar-item" href="/game-servers/project-zomboid"><img class="navbar-btn-img"
-              src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo" width="20px" height="20px">Project
+          <a class="navbar-item has-text-light" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img" src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20px" height="20px">ARK: Survival Evolved</a>
+          <a class="navbar-item has-text-light" href="/game-servers/minecraft"><img class="navbar-btn-img" src="/src/img/logo-minecraft.png" alt="Minecraft Logo" width="20px" height="20px">Minecraft</a>
+          <a class="navbar-item has-text-light" href="/game-servers/project-zomboid"><img class="navbar-btn-img" src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo" width="20px" height="20px">Project
             Zomboid</a>
-          <a class="navbar-item" href="/game-servers/terraria"><img class="navbar-btn-img"
-              src="/src/img/logo-terraria.png" alt="Terraria Logo" width="20px" height="20px">Terraria</a>
+          <a class="navbar-item has-text-light" href="/game-servers/terraria"><img class="navbar-btn-img" src="/src/img/logo-terraria.png" alt="Terraria Logo" width="20px" height="20px">Terraria</a>
           <hr class="navbar-divider">
-          <a class="navbar-item" href="/contact-staff">Suggest a Server Type</a>
+          <a class="navbar-item has-text-light" href="/contact-staff">Suggest a Server Type</a>
         </div>
       </div>
       <a class="navbar-item" href="/contact-staff">Contact Staff</a>
@@ -44,10 +38,9 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img"
-              src="/src/img/discord-logo.png" alt="Discord Logo" width="20px" height="20px">Discord</a>
+          <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img" src="/src/img/discord-logo.png" alt="Discord Logo" width="20px" height="20px">Discord</a>
           </a>
-          <a class="button is-light" href="/log-in">
+          <a class="button is-dark" href="/log-in">
             Log in
           </a>
         </div>
