--- a/game-servers/7-days-to-die/index.html
+++ b/game-servers/7-days-to-die/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-dark">
 
 <head>
   <title>7 Days To Die Servers - metropolis.city</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous"></script>
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
@@ -15,7 +14,7 @@
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
 
-<body>
+<body class="scrollbar-hide has-text-light">
   <div id="header-import">
   </div>
 
@@ -30,10 +29,7 @@
   </div>
 
   <div class="container is-max-desktop">
-    <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/Dt9EzY6FBWw"
-      title="7 Days To Die Trailer | PS4" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+    <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/Dt9EzY6FBWw" title="7 Days To Die Trailer | PS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div id="footer-import">
   </div>
