--- a/game-servers/project-zomboid/index.html
+++ b/game-servers/project-zomboid/index.html
@@ -29,8 +29,9 @@
   </div>
 
   <div class="container is-max-desktop">
-    <iframe width="1036" height="583" src="https://www.youtube-nocookie.com/embed/nPbsDmzZ3Oc" title="Project Zomboid Trailer - This Is How I Died
-      " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="video-container">
+      <iframe src="https://www.youtube-nocookie.com/embed/nPbsDmzZ3Oc" title="Project Zomboid Trailer - This Is How I Died" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </div>
   <div id="footer-import">
   </div>
