Fix navbar divider and dropdown

--- a/header.html
+++ b/header.html
@@ -18,9 +18,9 @@
   <div id="nav-menu" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="/about">About</a>
-      <div data-target="more" class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link" href="/game-servers">Game Servers</a>
-        <div class="navbar-dropdown has-background-dark" id="more">
+      <div data-target="game-servers" class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">Game Servers</a>
+        <div class="navbar-dropdown has-background-dark" id="game-servers">
           <a class="navbar-item has-text-light" href="/game-servers/7-days-to-die"><img class="navbar-btn-img" src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
             Die</a>
           <a class="navbar-item has-text-light" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img" src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20px" height="20px">ARK: Survival Evolved</a>
