--- a/header.html
+++ b/header.html
@@ -38,7 +38,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img" src="/src/img/discord-logo.png" alt="Discord Logo" width="20px" height="20px">Discord</a>
+          <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img" src="/src/img/discord-logo.png" alt="Discord Logo">Discord</a>
           </a>
           <a class="button is-dark" href="/log-in">
             Log in
