Fix navbar collapse when clicking off of it?

--- a/header.html
+++ b/header.html
@@ -1,7 +1,6 @@
 <head>
   <script src="/src/js/header.js"></script>
 </head>
-
 <nav role="navigation" class="navbar is-black-ter">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
@@ -48,3 +47,5 @@
     </div>
   </div>
 </nav>
+
+<div class="nav-background" id="nav-background" onclick="closeNav();"></div>
