--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -84,7 +84,7 @@
         <p class="modal-card-title">Metropolis Terms and Conditions</p>
         <button class="delete" onclick="closeModal();"></button>
       </header>
-      <section class="modal-card-body">
+      <section class="modal-card-body has-text-dark">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Elementum eu facilisis sed odio morbi. Tortor vitae purus faucibus ornare suspendisse sed nisi.
           Bibendum est ultricies integer quis auctor elit. Tellus mauris a diam maecenas sed enim ut sem. Neque sodales
