--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
   <div id="nav-menu" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="/about">About</a>
-      <div data-target="game-servers" class="navbar-item has-dropdown is-hoverable">
+      <div data-target="game-servers" class="navbar-item has-dropdown">
         <a class="navbar-link">Game Servers</a>
         <div class="navbar-dropdown has-background-dark" id="game-servers">
           <a class="navbar-item has-text-light" href="/game-servers/7-days-to-die"><img class="navbar-btn-img" src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
