fix textarea new line on safari 11

--- a/contact-staff/index.html
+++ b/contact-staff/index.html
@@ -68,7 +68,10 @@
       <div class="field">
         <label class="label">Message</label>
         <div class="control">
-          <textarea id="msgInput" class="textarea" placeholder="hello, &#13;&#10;i like pie &#13;&#10;sincerely, &#13;&#10;chcmatt"></textarea>
+          <textarea id="msgInput" class="textarea" placeholder="hello, 
+i like pie 
+sincerely, 
+chcmatt"></textarea>
         </div>
       </div>
 
