revert change to newline on textarea

--- a/contact-staff/index.html
+++ b/contact-staff/index.html
@@ -68,10 +68,7 @@
       <div class="field">
         <label class="label">Message</label>
         <div class="control">
-          <textarea id="msgInput" class="textarea" placeholder="hello, 
-i like pie 
-sincerely, 
-chcmatt"></textarea>
+          <textarea id="msgInput" class="textarea" placeholder="hello, &#13;&#10;i like pie &#13;&#10;sincerely, &#13;&#10;chcmatt"></textarea>
         </div>
       </div>
 
